2011-06-02 Gabor Simon <gabor.simon@mailbox.hu>
Missing key added, reported error fixed

    * local.properties: reference to new sdk location fixed

    * AndroidManifest.xml, res/values/constants.xml: version increased

    * src/org/dyndns/fules/ck/CompassKeyboardView.java: OutOfBounds error fixed

    * res/xml/default_*.xml: missing ampersand sign added

2011-05-17 Gabor Simon <gabor.simon@mailbox.hu>
Minor bugs fixed
	* src/org/dyndns/fules/ck/CompassKeyboard.java, CompassKeyboardSettings.java: code cleanup

	* src/org/dyndns/fules/ck/FilePicker.java: choiceMode bug fixed

2011-05-16 Gabor Simon <gabor.simon@mailbox.hu>
Layout switching improved

	* AndroidManifest.xml: TextDialogPreference added, typo in the name of FilePickerPreference fixed, version increased

	* src/org/dyndns/fules/ck/CompassKeyboardView.java: 'layout=n' action for keys added, some code cleanup 

	* src/org/dyndns/fules/ck/CompassKeyboard.java: layout handling improved

	* src/org/dyndns/fules/ck/CompassKeyboardSettings.java: layout-related code added

	* src/org/dyndns/fules/ck/FilePickerPreference.java: some code cleanup
	
	* src/org/dyndns/fules/ck/FilePicker.java: some code cleanup, choiceMode support started (FIXME: still has issues!)

	* res/values/constants.xml: menu constants reorganised

	* res/values/attrs.xml: TextDialogPreference defined

	* res/xml/default_*.xml: layout names published, layout switching actions added

	* res/xml/ck_settings.xml: layout-related preference changes

	* build.xml: target 'install' now uses the emulator, 'relinstall' the real device

2011-05-07 Gabor Simon <gabor.simon@mailbox.hu>
Direction choosing method improved

	* src/org/dyndns/fules/ck/CompassKeyboardView.java: direction choosing is now based on relative movement

	* src/org/dyndns/fules/ck/CompassKeyboard.java: missing initialisation of visual feedback settings added

2011-05-06 Gabor Simon <gabor.simon@mailbox.hu>
Visual feedback added
